--- a/style.css
+++ b/style.css
@@ -1,21 +1,31 @@
 body {
-    background: linear-gradient(to right, #6a11cb, #ff6b6b);
+    /* background: linear-gradient(to right, #6a11cb, #ff6b6b); */
+    background: linear-gradient(135deg, #2E3192, #4A6CB5, #0095B6, #1BFFFF);
+
+   
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-
+.date {
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+}
 .container-header {
     text-align: center;
     background-color: #87d5ec;
+    backdrop-filter: blur(10px);
     border-radius: 7px;
     padding: 6px 2px;
     border: 1px solid gainsboro;
     /* font-family: ;     */
 }
+
 .container-main {
     padding-bottom: 100px;
     padding-top: 50px;
     margin-top: 2em;
+}
+.container-main p {
+    color: white;
 }
 .container-update {
     display: flex;
@@ -25,7 +35,7 @@ body {
     align-items: center;
 }
 .container-update > div {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 10px;
     min-width: 100px;
     text-align: center;
@@ -33,13 +43,35 @@ body {
     transition: 300ms all;
     height: auto;
     cursor: pointer; 
-    box-shadow: 3px 5px 5px black;
-    background-color: whitesmoke;
+    /* box-shadow: 3px 5px 5px black; */
+    background-color: location;
 }
-.container-update > div:hover {
+.imgNav-location {
+    border: 2px solid black;
+    border-radius: 50%;
+}
+/* .nav-music img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    mix-blend-mode: darken;
+} */
+.nav-location img,
+.nav-music img,
+.nav-time img,
+.nav-pf img,
+.nav-tema img,
+.nav-liturgos img {
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    background-color: white;
+    
+}
+/* .container-update > div:hover {
     box-shadow: 3px 5px 5px rgb(164, 196, 255);
     color: aqua;
-}
+} */
 .container-update img {
     max-width: 600px;
 }
@@ -63,6 +95,9 @@ body {
     box-shadow: 3px 5px 5px black;
     margin-top: 30px;
     background-color: whitesmoke;
+}
+.tema {
+    text-align: center;
 }
 
 .container-img-tema{
@@ -126,15 +161,20 @@ body {
 }
 #arrowMusic,
 #arrowLocation,
-#arrowLiturgi,
+#arrowPf,
+#arrowLiturgos,
 #arrowTime,
 #arrowAyat {
     font-size: 4em;
     margin-top: 25px;
     cursor: pointer;
     cursor: pointer;
+    color: rgb(127, 215, 245);
 }
 
+.videoWaktu {
+    width: 70%;
+}
 
 
 /* @media screen and (max-width: 767px) {
